spacing issues on splash

--- a/app/_assets/scss/main.scss
+++ b/app/_assets/scss/main.scss
@@ -13,7 +13,7 @@ $head-font-weight: 100;
 $small-font-size:  $base-font-size * 0.875;
 $medium-font-size: $base-font-size * 1.5;
 $large-font-size:  $base-font-size * 2;
-$base-line-height: 1.6rem;
+$base-line-height: 1.8rem;
 
 $spacing-unit:     2rem;
 
@@ -29,13 +29,12 @@ $grey-colour:       #828282;
 $grey-colour-light: lighten($grey-colour, 40%);
 $grey-colour-dark:  darken($grey-colour, 25%);
 
-// Width of the content area
-$gap-size:         10px;
+$gap-size: 10px;
 
-$max-content-size: 900px;
+$small-break:          400px;
+$medium-break:         600px;
+$large-break:          1000px;
 
-$small-break:          600px;
-$medium-break:        1250px;
 
 
 
